<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrackMe</string>
    <string name="credits">Credits</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="empty"></string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="friends">Friends</string>
    <string name="custom">Custom</string>
    <string name="follow">Update position</string>
    <string name="show">Show</string>
    <string name="types">Types</string>
    <string name="traffic">Traffic</string>
    <string name="sattelite">Satellite</string>
    <string name="defaultSettings">Default settings</string>
    <string name="update">Update automatically</string>
    <string name="antialiasing">Antialiasing</string>
    <string name="strokewidth">Stroke width</string>
    <string name="showlegend">Show legend</string>
    <string name="forceupdate">Force update</string>
    <string name="editdefaultsettings">Edit default settings</string>
    <string name="credits_full">Android-Lab SS12\nTU-Braunschweig\n\n<font size="36"><b>TrackMe</b></font>\n\ncreated by\nChristian Brümmer, B.Sc.\nBennet Sartori\nMario Wozenilek, B.Sc.</string>

</resources>