<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:shrinkColumns="2" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@drawable/background_map_xhdpi"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:src="@drawable/main_logo_full_hdpi" />

            <Button
                android:id="@+id/main_button_map"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/map" />

            <Button
                android:id="@+id/main_button_settings"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/settings" />

            <Button
                android:id="@+id/main_button_credits"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/credits" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:gravity="center" >

            <Button
                android:id="@+id/main_btn_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_menu_home"
                android:text="@string/empty" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>